--- a/src/app/Paginas/Body/backup/categories/categories.component.css
+++ b/src/app/Paginas/Body/backup/categories/categories.component.css
@@ -1,7 +1,14 @@
-.width-11{
-  width: 11.111% !important;
+@media screen and (max-width: 1920px) and (max-height: 1080px) {
+  .table-fixed-xl {
+    width: 100% !important;
+  }
 }
-.table-fixed-xl {
-  /*overflow-x: scroll;*/
-  width: 100% !important;
+@media screen and (max-width: 1366px) and (max-height: 768px) {
+  .table-fixed-xl {
+    width: 200% !important;
+  }
+}
+.table-fixed-xl thead tr th,
+.table-fixed-xl tbody tr td {
+  width: 10% !important;
 }
