--- a/src/app/Paginas/Header/nav-encode/nav-encode.component.html
+++ b/src/app/Paginas/Header/nav-encode/nav-encode.component.html
@@ -34,7 +34,7 @@
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
             <a class="dropdown-item" (click)="userService.prueba()">Prueba</a>
-            <a class="dropdown-item" (click)="userService.pass()">Generate Pass</a>
+            <a class="dropdown-item" (click)="generatePass()">Generate Pass</a>
             <a class="dropdown-item" (click)="insertCurrencies()">Currency</a>
             <a class="dropdown-item" href="#" >Configurar</a>
             <a class="dropdown-item" (click)="userService.logout()">Cerrar sesion</a>
