--- a/src/app/Paginas/Body/backup/movements/movements.component.html
+++ b/src/app/Paginas/Body/backup/movements/movements.component.html
@@ -45,27 +45,128 @@
         <div class="row inline-grid">
           Id_Category
           <select class="form-control mr-sm-2 form-control-md input-header" [(ngModel)]="movementsService.filtersSearch.id_category.value" name="id_category" (ngModelChange)="movementsService.actionFilterEvent($event, 'id_category')">
-            <ng-container *ngIf="util.numberFormat(movementsService.filtersSearch.indexAccount.value) == -1">
-              <option value="0">Todas</option>
-              <ng-container *ngFor="let account of movementsService.AccountsBackup">
-                <option *ngFor="let category of account.categoriesAccount" [value]="category.id_category">{{category.id_category}}</option>
+
+            <ng-container *ngIf="util.numberFormat(movementsService.filtersSearch.indexAccount.value) == -1"><!-- Listar todas categorias de todas la cuentas -->
+              <ng-container *ngIf="movementsService.filtersSearch.sign.value == '-1' || movementsService.filtersSearch.id_category.value != '0'">
+                <option value="0">Todas</option>
+                <ng-container *ngFor="let account of movementsService.AccountsBackup">
+                  <option *ngFor="let category of account.categoriesAccount" [value]="category.id_category">{{category.id_category}}</option>
+                </ng-container>
+              </ng-container>
+
+              <ng-container *ngIf="movementsService.filtersSearch.sign.value != '-1' && movementsService.filtersSearch.id_category.value == '0'">
+                <option value="0">Todas</option>
+                <ng-container *ngFor="let account of movementsService.AccountsBackup">
+                  <ng-container *ngFor="let category of account.categoriesAccount">
+                    <option *ngIf="category.sign == movementsService.filtersSearch.sign.value" [value]="category.id_category">{{category.id_category}}</option>
+                  </ng-container>
+                </ng-container>
               </ng-container>
             </ng-container>
-            <ng-container *ngIf="util.numberFormat(movementsService.filtersSearch.indexAccount.value) != -1">
-              <option value="0" *ngIf="movementsService.AccountsBackup[util.numberFormat(movementsService.filtersSearch.indexAccount.value)].categoriesAccount.length > 0">Todos</option>
-              <option *ngFor="let category of movementsService.AccountsBackup[util.numberFormat(movementsService.filtersSearch.indexAccount.value)].categoriesAccount;" [value]="category.id_category">{{category.id_category}}</option>
+
+            <ng-container *ngIf="util.numberFormat(movementsService.filtersSearch.indexAccount.value) != -1"><!-- Listar todas categorias de la cuenta seleccionada -->
+              <ng-container *ngIf="movementsService.filtersSearch.sign.value == '-1' || movementsService.filtersSearch.id_category.value != '0'">
+                <option value="0" *ngIf="movementsService.AccountsBackup[util.numberFormat(movementsService.filtersSearch.indexAccount.value)].categoriesAccount.length > 0">Todos</option>
+                <option *ngFor="let category of movementsService.AccountsBackup[util.numberFormat(movementsService.filtersSearch.indexAccount.value)].categoriesAccount;" [value]="category.id_category">{{category.id_category}}</option>
+              </ng-container>
+
+              <ng-container *ngIf="movementsService.filtersSearch.sign.value != '-1' && movementsService.filtersSearch.id_category.value == '0'">
+                <option value="0" *ngIf="movementsService.AccountsBackup[util.numberFormat(movementsService.filtersSearch.indexAccount.value)].categoriesAccount.length > 0">Todos</option>
+                <ng-container *ngFor="let category of movementsService.AccountsBackup[util.numberFormat(movementsService.filtersSearch.indexAccount.value)].categoriesAccount;">
+                  <option *ngIf="category.sign == movementsService.filtersSearch.sign.value" [value]="category.id_category">{{category.id_category}}</option>
+                </ng-container>
+              </ng-container>
             </ng-container>
+
           </select>
           <button type="button" [ngClass]="(movementsService.filtersSearch.id_category.isFilter) ? 'close': 'btnFilter-disabled'" (click)="movementsService.resetValuefiltroSearch('id_category')">
             <span aria-hidden="true">&times;</span>
           </button>
         </div>
       </th>
-      <th scope="col" class="Encabezado-Tabla">Category</th>
-      <th scope="col" class="Encabezado-Tabla">Amount</th>
-      <th scope="col" class="Encabezado-Tabla">Sign</th>
-      <th scope="col" class="Encabezado-Tabla">Detail</th>
-      <th scope="col" class="Encabezado-Tabla">Date_record</th>
+      <th scope="col" class="Encabezado-Tabla">
+        <div class="row inline-grid">
+          Category
+          <select class="form-control mr-sm-2 form-control-md input-header" [(ngModel)]="movementsService.filtersSearch.id_category.value" name="id_category" (ngModelChange)="movementsService.actionFilterEvent($event, 'id_category')">
+
+            <ng-container *ngIf="util.numberFormat(movementsService.filtersSearch.indexAccount.value) == -1"><!-- Listar todas categorias de todas la cuentas -->
+              <ng-container *ngIf="movementsService.filtersSearch.sign.value == '-1' || movementsService.filtersSearch.id_category.value != '0'">
+                <option value="0">Todas</option>
+                <ng-container *ngFor="let account of movementsService.AccountsBackup">
+                  <option *ngFor="let category of account.categoriesAccount" [value]="category.id_category">[{{category.name}}] {{category.name}}</option>
+                </ng-container>
+              </ng-container>
+
+              <ng-container *ngIf="movementsService.filtersSearch.sign.value != '-1' && movementsService.filtersSearch.id_category.value == '0'">
+                <option value="0">Todas</option>
+                <ng-container *ngFor="let account of movementsService.AccountsBackup">
+                  <ng-container *ngFor="let category of account.categoriesAccount">
+                    <option *ngIf="category.sign == movementsService.filtersSearch.sign.value" [value]="category.id_category">[{{category.sign}}] {{category.name}}</option>
+                  </ng-container>
+                </ng-container>
+              </ng-container>
+            </ng-container>
+
+            <ng-container *ngIf="util.numberFormat(movementsService.filtersSearch.indexAccount.value) != -1"><!-- Listar todas categorias de la cuenta seleccionada -->
+              <ng-container *ngIf="movementsService.filtersSearch.sign.value == '-1' || movementsService.filtersSearch.id_category.value != '0'">
+                <option value="0" *ngIf="movementsService.AccountsBackup[util.numberFormat(movementsService.filtersSearch.indexAccount.value)].categoriesAccount.length > 0">Todos</option>
+                <option *ngFor="let category of movementsService.AccountsBackup[util.numberFormat(movementsService.filtersSearch.indexAccount.value)].categoriesAccount;" [value]="category.id_category">{{category.id_category}}</option>
+              </ng-container>
+
+              <ng-container *ngIf="movementsService.filtersSearch.sign.value != '-1' && movementsService.filtersSearch.id_category.value == '0'">
+                <option value="0" *ngIf="movementsService.AccountsBackup[util.numberFormat(movementsService.filtersSearch.indexAccount.value)].categoriesAccount.length > 0">Todos</option>
+                <ng-container *ngFor="let category of movementsService.AccountsBackup[util.numberFormat(movementsService.filtersSearch.indexAccount.value)].categoriesAccount;">
+                  <option *ngIf="category.sign == movementsService.filtersSearch.sign.value" [value]="category.id_category">{{category.id_category}}</option>
+                </ng-container>
+              </ng-container>
+            </ng-container>
+
+          </select>
+          <button type="button" [ngClass]="(movementsService.filtersSearch.id_category.isFilter) ? 'close': 'btnFilter-disabled'" (click)="movementsService.resetValuefiltroSearch('id_category')">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+      </th>
+      <th scope="col" class="Encabezado-Tabla">
+        <div class="row inline-grid">
+          Amount
+          <input type="text" class="form-control mr-sm-2 form-control-md input-header" [(ngModel)]="movementsService.filtersSearch.amount.value" name="amount" (keyup)="movementsService.actionFilterEvent($event, 'amount', true)">
+          <button type="button" [ngClass]="(movementsService.filtersSearch.amount.isFilter) ? 'close': 'btnFilter-disabled'" (click)="movementsService.resetValuefiltroSearch('amount')">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+      </th>
+      <th scope="col" class="Encabezado-Tabla">
+        <div class="row inline-grid">
+          Sign
+          <select class="form-control mr-sm-2 form-control-md input-header" [(ngModel)]="movementsService.filtersSearch.sign.value" name="sign" (ngModelChange)="movementsService.actionFilterEvent($event, 'sign')">
+            <option value="-1">Ambos</option>
+            <option value="-">-</option>
+            <option value="+">+</option>
+          </select>
+          <button type="button" [ngClass]="(movementsService.filtersSearch.sign.isFilter) ? 'close': 'btnFilter-disabled'" (click)="movementsService.resetValuefiltroSearch('sign')">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+      </th>
+      <th scope="col" class="Encabezado-Tabla">
+        <div class="row inline-grid">
+          Detail
+          <input type="text" class="form-control mr-sm-2 form-control-md input-header" [(ngModel)]="movementsService.filtersSearch.detail.value" name="detail" (keyup)="movementsService.actionFilterEvent($event, 'detail', true)">
+          <button type="button" [ngClass]="(movementsService.filtersSearch.amount.isFilter) ? 'close': 'btnFilter-disabled'" (click)="movementsService.resetValuefiltroSearch('detail')">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+      </th>
+      <th scope="col" class="Encabezado-Tabla">
+        <div class="row inline-grid">
+          Date_record
+          <input type="date" class="form-control mr-sm-2 form-control-md input-header" [(ngModel)]="movementsService.filtersSearch.date_record.value" name="date_record" (ngModelChange)="actionFilterEvent($event, 'date_record')">
+          <button type="button" [ngClass]="(movementsService.filtersSearch.date_record.isFilter) ? 'close': 'btnFilter-disabled'" (click)="resetValuefiltroSearch('date_record')">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+      </th>
       <th scope="col" class="Encabezado-Tabla">Time_record</th>
       <th scope="col" class="Encabezado-Tabla">Confirmed</th>
       <th scope="col" class="Encabezado-Tabla">Transfer</th>
@@ -80,44 +181,90 @@
       <th scope="col" class="Encabezado-Tabla">Iso_code</th>
       <th scope="col" class="Encabezado-Tabla">Operación</th>
     </thead>
-    <tbody>
-    <tr *ngFor="let movement of movementsService.Movements; let i = index" >
-      <td scope="row" class="Celdas-Tabla font-weight-bold">{{(i+1)}}</td>
-      <td class="Celdas-Tabla font-italic">{{movement.repeated}}</td>
-      <td class="Celdas-Tabla">{{movement.id_account}}</td>
-      <td class="Celdas-Tabla">{{util.asignarNombre(movement.id_account, movement.nameAccount)}}</td>
-      <td class="Celdas-Tabla">{{movement.id_category}}</td>
-      <td class="Celdas-Tabla">{{util.asignarNombre(movement.id_category, movement.nameCategory)}}</td>
-      <td class="Celdas-Tabla">{{movement.amount | currency: movement.symbol :'symbol':'1.0-6'}}</td>
-      <td class="Celdas-Tabla">{{movement.sign}}</td>
-      <td class="Celdas-Tabla">{{movement.detail}}</td>
-      <td class="Celdas-Tabla">{{movement.date_record | date: 'dd/MMMM/yyyy'}}</td>
-      <td class="Celdas-Tabla">{{movement.time_record}}</td>
-      <td class="Celdas-Tabla">{{movement.confirmed}}</td>
-      <td class="Celdas-Tabla">{{movement.transfer}}</td>
-      <td class="Celdas-Tabla">{{movement.date_idx}}</td>
-      <td class="Celdas-Tabla">{{movement.day}}</td>
-      <td class="Celdas-Tabla">{{movement.week}}</td>
-      <td class="Celdas-Tabla">{{movement.fortnight}}</td>
-      <td class="Celdas-Tabla">{{movement.month}}</td>
-      <td class="Celdas-Tabla">{{movement.year}}</td>
-      <td class="Celdas-Tabla">{{movement.operation_code}}</td>
-      <td class="Celdas-Tabla">{{movement.picture}}</td>
-      <td class="Celdas-Tabla">{{movement.iso_code}}</td>
-      <td class="Celdas-Tabla">
-        <button type="button" class="btn btn-primary btn-update" >
-          <span>
-            <fa-icon [icon]="util.faPen"></fa-icon>
-          </span>
-        </button>
-        <button type="button" class="btn btn-danger btn-delete" >
-          <span>
-            <fa-icon [icon]="util.faTrash"></fa-icon>
-          </span>
-        </button>
-      </td>
-    </tr>
-
+    <tbody *ngIf="!movementsService.isFilter()">
+      <tr *ngFor="let movement of movementsService.Movements; let i = index" >
+        <td scope="row" class="Celdas-Tabla font-weight-bold">{{(i+1)}}</td>
+        <td class="Celdas-Tabla font-italic">{{movement.repeated}}</td>
+        <td class="Celdas-Tabla">{{movement.id_account}}</td>
+        <td class="Celdas-Tabla">{{util.asignarNombre(movement.id_account, movement.nameAccount)}}</td>
+        <td class="Celdas-Tabla">{{movement.id_category}}</td>
+        <td class="Celdas-Tabla">{{util.asignarNombre(movement.id_category, movement.nameCategory)}}</td>
+        <td class="Celdas-Tabla">{{movement.amount | currency: movement.symbol :'symbol':'1.0-6'}}</td>
+        <td class="Celdas-Tabla">{{movement.sign}}</td>
+        <td class="Celdas-Tabla">{{movement.detail}}</td>
+        <td class="Celdas-Tabla">{{movement.date_record | date: 'dd/MMMM/yyyy'}}</td>
+        <td class="Celdas-Tabla">{{movement.time_record}}</td>
+        <td class="Celdas-Tabla">{{movement.confirmed}}</td>
+        <td class="Celdas-Tabla">{{movement.transfer}}</td>
+        <td class="Celdas-Tabla">{{movement.date_idx}}</td>
+        <td class="Celdas-Tabla">{{movement.day}}</td>
+        <td class="Celdas-Tabla">{{movement.week}}</td>
+        <td class="Celdas-Tabla">{{movement.fortnight}}</td>
+        <td class="Celdas-Tabla">{{movement.month}}</td>
+        <td class="Celdas-Tabla">{{movement.year}}</td>
+        <td class="Celdas-Tabla">{{movement.operation_code}}</td>
+        <td class="Celdas-Tabla">{{movement.picture}}</td>
+        <td class="Celdas-Tabla">{{movement.iso_code}}</td>
+        <td class="Celdas-Tabla">
+          <button type="button" class="btn btn-primary btn-update" (click)="acccionMovement(util.ACTUALIZAR, movement, i)">
+            <span>
+              <fa-icon [icon]="util.faPen"></fa-icon>
+            </span>
+          </button>
+          <button type="button" class="btn btn-danger btn-delete" (click)="acccionMovement(util.ELIMINAR, movement, i)">
+            <span>
+              <fa-icon [icon]="util.faTrash"></fa-icon>
+            </span>
+          </button>
+        </td>
+      </tr>
+      <div
+        [fromRoot]="true"
+        infiniteScroll
+        [infiniteScrollDistance]="2"
+        infiniteScrollContainer=".table-fixed-xl tbody"
+        (scrolled)="onScroll()">
+      </div>
+      <loading-spinner *ngIf="util.loadingMain"></loading-spinner>
+      <query-complete *ngIf="util.QueryComplete.isComplete" [msj]="util.QueryComplete.msj"></query-complete>
+    </tbody>
+    <tbody *ngIf="movementsService.isFilter()">
+      <tr *ngFor="let movement of movementsService.movementsFilter; let i = index" >
+        <td scope="row" class="Celdas-Tabla font-weight-bold">{{(i+1)}}</td>
+        <td class="Celdas-Tabla font-italic">{{movement.repeated}}</td>
+        <td class="Celdas-Tabla">{{movement.id_account}}</td>
+        <td class="Celdas-Tabla">{{util.asignarNombre(movement.id_account, movement.nameAccount)}}</td>
+        <td class="Celdas-Tabla">{{movement.id_category}}</td>
+        <td class="Celdas-Tabla">{{util.asignarNombre(movement.id_category, movement.nameCategory)}}</td>
+        <td class="Celdas-Tabla">{{movement.amount | currency: movement.symbol :'symbol':'1.0-6'}}</td>
+        <td class="Celdas-Tabla">{{movement.sign}}</td>
+        <td class="Celdas-Tabla">{{movement.detail}}</td>
+        <td class="Celdas-Tabla">{{movement.date_record | date: 'dd/MMMM/yyyy'}}</td>
+        <td class="Celdas-Tabla">{{movement.time_record}}</td>
+        <td class="Celdas-Tabla">{{movement.confirmed}}</td>
+        <td class="Celdas-Tabla">{{movement.transfer}}</td>
+        <td class="Celdas-Tabla">{{movement.date_idx}}</td>
+        <td class="Celdas-Tabla">{{movement.day}}</td>
+        <td class="Celdas-Tabla">{{movement.week}}</td>
+        <td class="Celdas-Tabla">{{movement.fortnight}}</td>
+        <td class="Celdas-Tabla">{{movement.month}}</td>
+        <td class="Celdas-Tabla">{{movement.year}}</td>
+        <td class="Celdas-Tabla">{{movement.operation_code}}</td>
+        <td class="Celdas-Tabla">{{movement.picture}}</td>
+        <td class="Celdas-Tabla">{{movement.iso_code}}</td>
+        <td class="Celdas-Tabla">
+          <button type="button" class="btn btn-primary btn-update" (click)="acccionMovement(util.ACTUALIZAR, movement, i)">
+              <span>
+                <fa-icon [icon]="util.faPen"></fa-icon>
+              </span>
+          </button>
+          <button type="button" class="btn btn-danger btn-delete" (click)="acccionMovement(util.ELIMINAR, movement, i)">
+              <span>
+                <fa-icon [icon]="util.faTrash"></fa-icon>
+              </span>
+          </button>
+        </td>
+      </tr>
     </tbody>
   </table>
 </div>
