--- a/src/app/Paginas/Body/backup/movements/movements.component.css
+++ b/src/app/Paginas/Body/backup/movements/movements.component.css
@@ -12,3 +12,11 @@
 .table-fixed-xl tbody tr td {
   width: 4.3478% !important;
 }
+
+.checkRadioCenter {
+  display: inline-flex;
+  justify-content: center;
+}
+.width-90{
+  width: 90px !important;
+}
