--- a/src/app/Paginas/Body/backup/automatics/automatics.component.html
+++ b/src/app/Paginas/Body/backup/automatics/automatics.component.html
@@ -19,7 +19,7 @@
       <form [formGroup]="automatic" (ngSubmit)="operation()">
         <div class="modal-body">
           <div class="row" style="width: 100%; display: block; margin-bottom: 20px;" *ngIf="util.isDelete(option)">
-            <h5 class="text-center" style="font-weight: 500;">¿ Esta seguro de eliminar la configuración automática num: {{(automaticService.indexAutomaticSelected + 1)}}, Id_operation: {{automatic.value.id_operation}}, Id_account: {{automatic.value.id_account}}, Id_category: {{automatic.value.id_category}} del Respaldo Id_backup: {{automaticService.id_backup}} ?</h5>
+            <h5 class="text-center" style="font-weight: 500;">¿ Esta seguro de eliminar la operación automática num: {{(automaticService.indexAutomaticSelected + 1)}}, Id_operation: {{automatic.value.id_operation}}, Id_account: {{automatic.value.id_account}}, Id_category: {{automatic.value.id_category}} del Respaldo Id_backup: {{automaticService.id_backup}} ?</h5>
           </div>
           <div class="form-group">
             <div class="form-row">
